--- a/templates/page-react.html
+++ b/templates/page-react.html
@@ -1,3 +1,3 @@
 <!-- wp:template-part {"slug":"header"} /-->
-<div id="root"></div>
+<!-- wp:pattern {"slug":"twentytwentyfive-child/template-react-root"} /-->
 <!-- wp:template-part {"slug":"footer"} /-->
