--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -2,4 +2,12 @@
     .modal-btn--closing {
         @apply cursor-pointer absolute top-[12px] right-[12px] text-3xl leading-none text-gray-700 hover:text-red-600 transition-transform duration-300;
     }
+
+    .wp-modal-overlay{
+        @apply fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50;
+    }
+
+    .wp-modal-body{
+        @apply bg-white p-6 rounded-lg shadow-lg w-96 transition-all transform relative;
+    }
 }
