updated some structures

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -10,4 +10,8 @@
     .wp-modal-body{
         @apply bg-white p-6 rounded-lg shadow-lg w-96 transition-all transform relative;
     }
+
+    .wp-section{
+        @apply py-14;
+    }
 }
